correcion del nombre

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <h1>Hoja de Vida - Ingeniero Mauricio Ortiz</h1>
+  <h1>Hoja de Vida - Ingeniero Ewin Mauricio Ortiz</h1>
   
   <div class="section">
     <h2>Información personal</h2>
