asignacion de ciudad

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <h2>Información personal</h2>
     <p><strong>Nombre:</strong> Mauricio Ortiz</p>
     <p><strong>Fecha de nacimiento:</strong> 10 de abril de 1985</p>
-    <p><strong>Dirección:</strong> Calle 123, Ciudad, País</p>
+    <p><strong>Dirección:</strong> Calle 123, La Plata Huila, Clombia</p>
     <p><strong>Teléfono:</strong> +1 234 5678</p>
-    <p><strong>Email:</strong> mauricio.ortiz@example.com</p>
+    <p><strong>Email:</strong> ewinortiz@gmail.com</p>
   </div>
   
   <div class="section">
