--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h2>Información personal</h2>
     <p><strong>Nombre:</strong> Mauricio Ortiz</p>
     <p><strong>Fecha de nacimiento:</strong> 10 de abril de 1985</p>
-    <p><strong>Dirección:</strong> Calle 123, La Plata Huila, Clombia</p>
+    <p><strong>Dirección:</strong> Calle 123, La Plata Huila, Colombia</p>
     <p><strong>Teléfono:</strong> +1 234 5678</p>
     <p><strong>Email:</strong> ewinortiz@gmail.com</p>
   </div>
@@ -54,7 +54,7 @@
   <div class="section">
     <h2>Experiencia laboral</h2>
     <p><strong>Ingeniero de Proyectos</strong></p>
-    <p>Empresa ABC, Ciudad, País</p>
+    <p>ASMET SALUD, Valledupar, Colombia</p>
     <p>Fecha de inicio: enero de 2011</p>
     <p>Fecha de fin: diciembre de 2015</p>
     <p>Descripción de responsabilidades y logros en el cargo.</p>
