trabajo de desarrollo

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <p>ASMET SALUD, Valledupar, Colombia</p>
     <p>Fecha de inicio: enero de 2011</p>
     <p>Fecha de fin: diciembre de 2015</p>
-    <p>Descripción de responsabilidades y logros en el cargo.</p>
+    <p>Je de Departamento de Sistemas</p>
     
     <p><strong>Ingeniero de Desarrollo</strong></p>
-    <p>Empresa XYZ, Ciudad, País</p>
+    <p>Empresa SITIS, POPAYAN, País</p>
     <p>Fecha de inicio: enero de 2016</p>
     <p>Fecha de fin: actualidad</p>
     <p>Descripción de responsabilidades y logros en el cargo.</p>
